
#noinst_LIBRARIES = libjxnet.a
lib_LTLIBRARIES = libjxnet.la
#lib_include = 
include_HEADERS = ids.h utils.h preconditions.h #iwlib.h wireless.h 
#libjxnet_a_SOURCES = 
libjxnet_la_SOURCES = \
	addr_utils.c \
	ids.c jxnet.c \
	utils.c \
	bpf.c \
	preconditions.c \
	arp.c

libjxnet_la_LDFLAGS = -avoid-version

