
 ##
 # Copyright (C) 2015-2019 Jxnet
 # Author: Ardika Rommy Sanjaya
 ##

#noinst_LIBRARIES = libjxnet.a
lib_LTLIBRARIES = libjxnet.la
#lib_include = 
include_HEADERS = ids.h utils.h preconditions.h
#libjxnet_a_SOURCES = 
libjxnet_la_SOURCES = \
	ids.c \
	preconditions.c \
	bpf.c \
	jxnet.c \
	utils.c

libjxnet_la_LDFLAGS = -avoid-version -no-undefined

